--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest --no-watch",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js, jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "next": "14.2.6",
@@ -23,7 +29,9 @@
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
+    "husky": "^9.1.5",
     "jsdom": "^24.1.1",
+    "lint-staged": "^15.2.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
